--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,11 +44,30 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.13
+        with:
+          versionSpec: "5.x"
+
+      - name: Version with GitVersion # https://github.com/marketplace/actions/use-actions
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.13
+
       - name: Test
-        run: go test -v -race ./...
+        run: go test -v -race -coverprofile=coverage.out -covermode=count -json ./... > test-report.out
 
       - name: Go Vet
         run: go vet ./...
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master # https://github.com/marketplace/actions/sonarcloud-scan
+        if: ${{ github.actor != 'dependabot[bot]' }}
+        with:
+          args: >
+            -Dsonar.projectVersion=${{ steps.gitversion.outputs.FullSemVer }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   lint:
     name: Lint
