--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0.9.13
 
       - name: Test
-        run: go test -v -race -coverprofile=coverage.out -covermode=count -json ./... > test-report.out
+        run: go test -v -race -coverprofile=coverage.out -covermode=atomic -json ./... > test-report.out
 
       - name: Go Vet
         run: go vet ./...
