--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,5 +15,6 @@ sonar.projectName=go-read-burn
 sonar.sourceEncoding=UTF-8
 
 # Go language settings
-sonar.go.tests.reportPaths=test-report.out
 sonar.go.coverage.reportPaths=coverage.out
+sonar.go.govet.reportPaths=govet-report.out
+sonar.go.tests.reportPaths=test-report.out
