feat: add docker volume for db Fixes #16

--- a/cmd/go-read-burn/dockerfile
+++ b/cmd/go-read-burn/dockerfile
@@ -19,4 +19,5 @@ COPY --from=builder /app/* ./
 COPY --from=builder /usr/local/go/lib/time/zoneinfo.zip /
 ENV TZ=Australia/Brisbane \
     ZONEINFO=/zoneinfo.zip
+VOLUME [ "/data" ]
 CMD [ "./go-read-burn" ]
