--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -33,7 +33,10 @@ services:
     environment:
       - "OTEL_EXPORTER_OTLP_ENDPOINT=collector:4318"
       - "OTEL_EXPORTER_OTLP_ENDPOINT_TYPE=http" # http or grpc
-      - "OTEL_SERVICE_NAME=${EXPORTER_UPTRACE_DSN}"
+      - "OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME}"
       - "OTEL_HEALTH_URL=http://collector:13133"
+      - "GRB_DB_PATH=/data/secrets.db"
+    volumes:
+      - "../db:/data"
     depends_on:
       - collector
