--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       contents: write
     outputs:
       FullSemVer: ${{ steps.gitversion.outputs.FullSemVer }}
-      PreReleaseTagWithDash: ${{ steps.gitversion.outputs.PreReleaseTagWithDash }}
+      PreReleaseTag: ${{ steps.gitversion.outputs.PreReleaseTag }}
     steps:
       - uses: actions/checkout@v3.5.3
         with:
@@ -35,7 +35,7 @@ jobs:
       - name: Create annotation for build error
         run: |
           echo "::notice::FullSemVer ${{ steps.gitversion.outputs.FullSemVer }}"
-          echo "::notice::PreReleaseTagWithDash ${{ steps.gitversion.outputs.PreReleaseTagWithDash }}"
+          echo "::notice::PreReleaseTag ${{ steps.gitversion.outputs.PreReleaseTag }}"
   build:
     name: Build
     runs-on: ubuntu-latest
