--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,5 +16,6 @@ sonar.sourceEncoding=UTF-8
 
 # Go language settings
 sonar.go.coverage.reportPaths=coverage.out
+sonar.go.golangci-lint.reportPaths=golint-report.out
 sonar.go.govet.reportPaths=govet-report.out
 sonar.go.tests.reportPaths=test-report.out
