--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Test and Release
+name: Build and Test
 
 on:
   push:
@@ -13,129 +13,107 @@ on:
   workflow_dispatch:
 
 jobs:
+  version:
+    name: Generate version
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      FullSemVer: ${{ steps.gitversion.outputs.FullSemVer }}
+      PreReleaseTag: ${{ steps.gitversion.outputs.PreReleaseTag }}
+    steps:
+      - uses: actions/checkout@v3.5.3
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.10.2
+        with:
+          versionSpec: "5.x"
+      - name: Use GitVersion
+        id: gitversion # step id used as reference for output values
+        uses: gittools/actions/gitversion/execute@v0.10.2
+      - name: Create annotation for build error
+        run: |
+          echo "::notice::FullSemVer ${{ steps.gitversion.outputs.FullSemVer }}"
+          echo "::notice::PreReleaseTag ${{ steps.gitversion.outputs.PreReleaseTag }}"
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v3
       - name: Set up Go 1.x
         uses: actions/setup-go@v3
         with:
-          go-version: ^1.19
-        id: go
-
-      - name: Check out code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
+          go-version: ^1.20
       - name: Run go build
         run: go build -v ./...
-
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@v3
       - name: Set up Go 1.x
         uses: actions/setup-go@v3
         with:
-          go-version: ^1.19
-        id: go
-
-      - name: Check out code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.15
-        with:
-          versionSpec: "5.x"
-
-      - name: Version with GitVersion # https://github.com/marketplace/actions/use-actions
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.15
-
+          go-version: ^1.20
       - name: Test
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic -json ./... > test-report.out
-
       - name: Go Vet
         run: go vet ./... 2> govet-report.out
-
+      - name: Upload test results
+        uses: actions/upload-artifact@master
+        with:
+          name: test-output
+          path: |
+            coverage.out
+            govet-report.out
+            test-report.out
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v3
+        with:
+          go-version: ^1.20
+      - name: Run golangci-lint # https://github.com/marketplace/actions/run-golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          args: --out-format checkstyle > golint-report.out
+      - name: Upload lint results
+        uses: actions/upload-artifact@master
+        with:
+          name: lint-output
+          path: golint-report.out
+  sonar-cloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    needs: [version, lint, test]
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v3
+        with:
+          go-version: ^1.20
+      - uses: actions/download-artifact@master
+        with:
+          name: test-output
+          path: "."
+      - uses: actions/download-artifact@master
+        with:
+          name: lint-output
+          path: "."
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master # https://github.com/marketplace/actions/sonarcloud-scan
         if: ${{ github.actor != 'dependabot[bot]' }}
         with:
           args: >
-            -Dsonar.projectVersion=${{ steps.gitversion.outputs.FullSemVer }}
+            -Dsonar.projectVersion=${{ needs.version.outputs.FullSemVer }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v3
-        with:
-          go-version: ^1.19
-        id: go
-
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Run golangci-lint # https://github.com/marketplace/actions/run-golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.50
-
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [build, test, lint]
-    if: contains(github.ref, 'main')
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v3
-        with:
-          go-version: ^1.19
-        id: go
-
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.15
-        with:
-          versionSpec: "5.x"
-
-      - name: Version with GitVersion # https://github.com/marketplace/actions/use-actions
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.15
-
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
-        if: ${{ steps.gitversion.outputs.PreReleaseTagWithDash == '' }}
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.gitversion.outputs.FullSemVer }}
-          release_branches: main
-          tag_prefix: v
-
-      - name: Check out code
-        uses: actions/checkout@v3
-        if: ${{ steps.gitversion.outputs.PreReleaseTagWithDash == '' }}
-        with:
-          fetch-depth: 0
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v3
-        if: ${{ steps.gitversion.outputs.PreReleaseTagWithDash == '' }}
-        with:
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
