--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,7 +3,7 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod download
-builds:
+builds: # https://goreleaser.com/cookbooks/using-main.version/
   - env:
       - CGO_ENABLED=0
     main: ./cmd/go-read-burn/main.go
@@ -12,17 +12,9 @@ builds:
       - linux
       - windows
       - darwin
-    ldflags:
-      - -s -w -X github.com/danstis/go-read-burn/internal/version.Version={{.Version}}
-    binary: example
+    binary: go-read-burn
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-    format_overrides:
+  - format_overrides:
       - goos: windows
         format: zip
 checksum:
