--- a/cmd/go-read-burn/dockerfile
+++ b/cmd/go-read-burn/dockerfile
@@ -2,7 +2,9 @@ FROM golang:1.18.4-alpine AS builder
 
 RUN apk add --no-cache git
 
-ARG BUILD=0.0.0-development
+ARG COMMIT=none
+ARG DATE=unknown
+ARG VERSION=0.0.0-development
 
 WORKDIR /github.com/danstis/go-read-burn/
 COPY ../go.mod .
@@ -10,7 +12,7 @@ COPY ../go.sum .
 RUN go mod download
 COPY . .
 RUN mkdir /app
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-s -w -X 'github.com/danstis/go-read-burn/internal/version.Version=$BUILD'" -o /app/go-read-burn ./cmd/go-read-burn
+RUN CGO_ENABLED=0 GOOS=linux go build -ldflags "-s -w -X 'main.version=$VERSION'" -o /app/go-read-burn ./cmd/go-read-burn
 
 FROM alpine:3
 RUN apk --no-cache add ca-certificates
