--- a/deploy/compose.yml
+++ b/deploy/compose.yml
@@ -4,41 +4,18 @@
 version: '3'
 name: go-read-burn
 services:
-  collector:
-    image: otel/opentelemetry-collector:0.56.0 # https://opentelemetry.io/docs/collector/getting-started/
-    command: [ "--config=/config/collector/config.yml" ]
-    volumes:
-      - ./collector:/config/collector
-    restart: "no" #on-failure
-    environment:
-      - EXPORTER_LIGHTSTEP_TOKEN=${EXPORTER_LIGHTSTEP_TOKEN}
-      - EXPORTER_HONEYCOMB_TEAM=${EXPORTER_HONEYCOMB_TEAM}
-      - EXPORTER_UPTRACE_DSN=${EXPORTER_UPTRACE_DSN}
-    ports:
-      # - "1888:1888" # pprof extension
-      # - "8888:8888"   # Prometheus metrics exposed by the collector
-      # - "8889:8889"   # Prometheus exporter metrics
-      # - "13133:13133" # health_check extension
-      - "14317:4317" # OTLP gRPC receiver
-      - "14318:4318" # OTLP http receiver
-      - "55679:55679" # zpages extension
-
   app:
     build:
       context: ../
       dockerfile: cmd/go-read-burn/dockerfile
       args:
-        - BUILD=${VERSION}
+        - COMMIT=${COMMIT}
+        - DATE=${DATE}
+        - VERSION=${VERSION}
     restart: "no" #on-failure
     environment:
-      - "OTEL_EXPORTER_OTLP_ENDPOINT=collector:4318"
-      - "OTEL_EXPORTER_OTLP_ENDPOINT_TYPE=http" # http or grpc
-      - "OTEL_SERVICE_NAME=${OTEL_SERVICE_NAME}"
-      - "OTEL_HEALTH_URL=http://collector:13133"
       - "GRB_DB_PATH=/data/secrets.db"
     ports:
       - "8080:80"
     volumes:
       - "../db:/data"
-    depends_on:
-      - collector
