--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,10 @@
     "forwardPorts": [80],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "go mod download"
+    "postCreateCommand": [
+        "go mod download",
+        "sudo apt-get update && sudo apt-get install -y nodejs"
+    ]
 
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
