--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,6 +92,7 @@ jobs:
   sonar-cloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     needs: [version, lint, test]
     steps:
       - name: Check out code
@@ -110,7 +111,6 @@ jobs:
           path: "."
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master # https://github.com/marketplace/actions/sonarcloud-scan
-        if: ${{ github.actor != 'dependabot[bot]' }}
         with:
           args: >
             -Dsonar.projectVersion=${{ needs.version.outputs.FullSemVer }}
