--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Run golangci-lint # https://github.com/marketplace/actions/run-golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          args: --out-format checkstyle | tee golint-report.out
+          args: --out-format checkstyle:golint-report.out
       - name: Upload lint results
         uses: actions/upload-artifact@master
         with:
