--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,7 @@ name: Build and Test
 on:
   push:
     branches:
-      - main
-      - beta
-      - "feature/*"
-      - "fix/*"
+      - "*"
   pull_request:
     branches:
       - main
@@ -59,9 +56,9 @@ jobs:
         with:
           go-version: ^1.20
       - name: Test
-        run: go test -v -race -coverprofile=coverage.out -covermode=atomic -json ./... > test-report.out
+        run: go test -v -race -coverprofile=coverage.out -covermode=atomic -json ./... | tee test-report.out
       - name: Go Vet
-        run: go vet ./... 2> govet-report.out
+        run: go vet ./... 2>&1 | tee govet-report.out
       - name: Upload test results
         uses: actions/upload-artifact@master
         with:
@@ -83,7 +80,7 @@ jobs:
       - name: Run golangci-lint # https://github.com/marketplace/actions/run-golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          args: --out-format checkstyle > golint-report.out
+          args: --out-format checkstyle:golint-report.out
       - name: Upload lint results
         uses: actions/upload-artifact@master
         with:
@@ -92,6 +89,7 @@ jobs:
   sonar-cloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     needs: [version, lint, test]
     steps:
       - name: Check out code
@@ -110,7 +108,6 @@ jobs:
           path: "."
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master # https://github.com/marketplace/actions/sonarcloud-scan
-        if: ${{ github.actor != 'dependabot[bot]' }}
         with:
           args: >
             -Dsonar.projectVersion=${{ needs.version.outputs.FullSemVer }}
