ci: revert to running on PRs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,13 @@ name: Build and Test
 on:
   push:
     branches:
-      - "*"
+      - main
+      - beta
+      - "feature/*"
+      - "fix/*"
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
