chore: changed postCreateCommand to run a different script for installing tools.
# Aider chat conversation:

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -57,7 +57,7 @@
     "forwardPorts": [80],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "sudo apt-get update && sudo apt-get install -y nodejs"
+    "postCreateCommand": "bash scripts/install-tools.sh"
 
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
