--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,9 +15,14 @@
             "settings": {
                 "go.toolsManagement.checkForUpdates": "local",
                 "go.useLanguageServer": true,
-                "go.gopath": "/go"
+                "go.gopath": "/go",
+                "terminal.integrated.defaultProfile.linux": "zsh",
+                "terminal.integrated.profiles.linux": {
+                    "zsh": {
+                        "path": "/bin/zsh"
+                    }
+                }
             },
-            "shell": "zsh",
             "extensions": [
                 "Codeium.codeium",
                 "dakara.transformer",
@@ -57,7 +62,7 @@
     "forwardPorts": [80],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "bash scripts/install-tools.sh"
+    "postCreateCommand": "pwd && bash .devcontainer/scripts/install-tools.sh"
 
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
