--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,27 +24,28 @@
                 }
             },
             "extensions": [
-                "Codeium.codeium",
-                "dakara.transformer",
-                "DavidAnson.vscode-markdownlint",
-                "eamodio.gitlens",
-                "EditorConfig.EditorConfig",
-                "github.vscode-github-actions",
-                "GitHub.vscode-pull-request-github",
-                "golang.go",
-                "Gruntfuggly.todo-tree",
-                "hbenl.vscode-test-explorer",
-                "mhutchie.git-graph",
-                "michelemelluso.gitignore",
-                "ms-azuretools.vscode-docker",
-                "redhat.vscode-commons",
-                "redhat.vscode-yaml",
-                "riussi.code-stats-vscode",
-                "SonarSource.sonarlint-vscode",
-                "sourcegraph.cody-ai",
-                "streetsidesoftware.code-spell-checker",
-                "vscode-icons-team.vscode-icons"
-            ]
+				"Codeium.codeium",
+				"dakara.transformer",
+				"DavidAnson.vscode-markdownlint",
+				"eamodio.gitlens",
+				"EditorConfig.EditorConfig",
+				"github.vscode-github-actions",
+				"GitHub.vscode-pull-request-github",
+				"golang.go",
+				"Gruntfuggly.todo-tree",
+				"hbenl.vscode-test-explorer",
+				"mhutchie.git-graph",
+				"michelemelluso.gitignore",
+				"ms-azuretools.vscode-docker",
+				"redhat.vscode-commons",
+				"redhat.vscode-yaml",
+				"riussi.code-stats-vscode",
+				"SonarSource.sonarlint-vscode",
+				"sourcegraph.cody-ai",
+				"streetsidesoftware.code-spell-checker",
+				"vscode-icons-team.vscode-icons",
+				"esbenp.prettier-vscode"
+			]
         }
     },
     "features": {
