--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/go
 {
     "name": "Go",
-    "image": "mcr.microsoft.com/devcontainers/go:0-1-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/go:1",
 
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
@@ -24,28 +24,28 @@
                 }
             },
             "extensions": [
-				"Codeium.codeium",
-				"dakara.transformer",
-				"DavidAnson.vscode-markdownlint",
-				"eamodio.gitlens",
-				"EditorConfig.EditorConfig",
-				"github.vscode-github-actions",
-				"GitHub.vscode-pull-request-github",
-				"golang.go",
-				"Gruntfuggly.todo-tree",
-				"hbenl.vscode-test-explorer",
-				"mhutchie.git-graph",
-				"michelemelluso.gitignore",
-				"ms-azuretools.vscode-docker",
-				"redhat.vscode-commons",
-				"redhat.vscode-yaml",
-				"riussi.code-stats-vscode",
-				"SonarSource.sonarlint-vscode",
-				"sourcegraph.cody-ai",
-				"streetsidesoftware.code-spell-checker",
-				"vscode-icons-team.vscode-icons",
-				"esbenp.prettier-vscode"
-			]
+                "Codeium.codeium",
+                "dakara.transformer",
+                "DavidAnson.vscode-markdownlint",
+                "eamodio.gitlens",
+                "EditorConfig.EditorConfig",
+                "github.vscode-github-actions",
+                "GitHub.vscode-pull-request-github",
+                "golang.go",
+                "Gruntfuggly.todo-tree",
+                "hbenl.vscode-test-explorer",
+                "mhutchie.git-graph",
+                "michelemelluso.gitignore",
+                "ms-azuretools.vscode-docker",
+                "redhat.vscode-commons",
+                "redhat.vscode-yaml",
+                "riussi.code-stats-vscode",
+                "SonarSource.sonarlint-vscode",
+                "sourcegraph.cody-ai",
+                "streetsidesoftware.code-spell-checker",
+                "vscode-icons-team.vscode-icons",
+                "esbenp.prettier-vscode"
+            ]
         }
     },
     "features": {
@@ -54,13 +54,13 @@
         "ghcr.io/guiyomh/features/goreleaser:0": {},
         "ghcr.io/guiyomh/features/gotestsum:0": {},
         "ghcr.io/devcontainers/features/docker-in-docker": {},
-        "ghcr.io/danstis/devcontainers-features/gitversion:0": {
+        "ghcr.io/danstis/devcontainers-features/gitversion:1": {
             "version": "5.11.1"
         }
     },
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    "forwardPorts": [80],
+    // "forwardPorts": [80],
 
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": "pwd && bash .devcontainer/scripts/install-tools.sh"
