fix: add explicit golangci-lint version for v9 action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,6 +86,7 @@ jobs:
       - name: Run golangci-lint # https://github.com/marketplace/actions/run-golangci-lint
         uses: golangci/golangci-lint-action@v9
         with:
+          version: v2.1
           args: --out-format checkstyle:golint-report.out --issues-exit-code=0
       - name: Upload lint results
         uses: actions/upload-artifact@master
