--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: v2.1
-          args: --out-format checkstyle:golint-report.out --issues-exit-code=0
+          args: --output.formats checkstyle:golint-report.out --issues-exit-code=0
       - name: Upload lint results
         uses: actions/upload-artifact@master
         with:
