fix: use correct v2 output format flag syntax
In golangci-lint v2, --out-format=checkstyle:file becomes
--output.checkstyle.path=file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: v2.6
-          args: --output.formats checkstyle:golint-report.out --issues-exit-code=0
+          args: --output.checkstyle.path=golint-report.out --issues-exit-code=0
       - name: Upload lint results
         uses: actions/upload-artifact@master
         with:
